# agroconecta-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  BACKEND_KNOWLEDGE.md  CLAUDE.md  Makefile  docker-compose.yml  fix_seed_users.py  fix_seed_uuids.py  pyproject.toml  skills-lock.json  test_error.py
.agents/skills/agroconecta/: SKILL.md
.agents/skills/cosmic-python-ddd/: SKILL.md
.agents/skills/python-executor/: SKILL.md
.agents/skills/sqlalchemy-alembic-expert-best-practices-code-review/rules/: change-column-type.md
.agents/skills/ui-ux-pro-max/data/: _sync_all.py
.agents/skills/ui-ux-pro-max/scripts/: search.py
.claude/skills/: agroconecta  cosmic-python-ddd  sqlalchemy
.claude/skills/cosmic-python-ddd-workspace/evals/: evals.json
.claude/skills/cosmic-python-ddd-workspace/iteration-1/: feedback.json
.claude/skills/cosmic-python-ddd-workspace/iteration-1/eval-1-bounded-context/: eval_metadata.json
.claude/skills/cosmic-python-ddd-workspace/iteration-1/eval-2-read-endpoint/: eval_metadata.json
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 28789c348985_add_refresh_tokens_rate_limits_event_log.py  6ef814125c92_add_orders.py  b39ef4da07b9_initial.py  c2266f9bdb5c_drop_refresh_tokens.py
api/: index.py
infra/: app.py  requirements.txt
infra/stacks/: api_stack.py  database_stack.py  dynamo_stack.py  iam_stack.py  storage_stack.py
scripts/: seed_db.py
src/catalog/farmer/application/dtos/: outputs.py
src/catalog/farmer/domain/: aggregates.py  events.py  exceptions.py  repositories.py  types.py  value_objects.py
src/catalog/farmer/infrastructure/: mappers.py  models.py  repositories.py
src/catalog/product/domain/: aggregates.py  events.py  exceptions.py  repositories.py  types.py  value_objects.py
src/catalog/product/infrastructure/: mappers.py  models.py  repositories.py
src/commerce/order/application/: unit_of_work.py
src/commerce/order/domain/: aggregates.py  events.py  exceptions.py  repositories.py  types.py  value_objects.py
src/commerce/order/infrastructure/: mappers.py  models.py  repositories.py
src/entrypoints/: app.py  dependencies.py  event_lambda_handler.py  lambda_handler.py  middleware.py
src/identity/user/application/: unit_of_work.py
src/identity/user/domain/: aggregates.py  events.py  exceptions.py  repositories.py  types.py  value_objects.py
src/identity/user/infrastructure/: mappers.py  models.py  repositories.py
src/notifications/: user_events.py
src/shared_kernel/application/ports/: email_service.py  event_publisher.py  message_bus.py  repositories.py  unit_of_work.py
src/shared_kernel/domain/: aggregates.py  base_model.py  commands.py  entities.py  events.py  exceptions.py  value_objects.py
src/shared_kernel/infrastructure/: config.py  message_bus.py  uow.py
src/shared_kernel/infrastructure/adapters/: dynamo_audit_publisher.py  dynamo_rate_limit.py  dynamo_refresh_token.py  event_bridge.py  postgres_event_publisher.py  postgres_rate_limit.py  postgres_refresh_token.py  resend_email.py  ses.py  stub_email.py  stub_event_publisher.py  stub_refresh_token.py
src/shared_kernel/infrastructure/database/: base.py  models.py  session.py
tests/: conftest.py
tests/unit/catalog/domain/: test_farmer_aggregate.py  test_product_aggregate.py
tests/unit/identity/domain/: test_user_aggregate.py
(+23 files in other folders)
