[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agroconecta-backend"
version = "0.1.0"
description = "AgroConecta Backend — FastAPI + Hexagonal + DDD"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "alembic>=1.13",
    "uvicorn[standard]>=0.30",
    "psycopg2-binary>=2.9",
    "resend>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "sqlalchemy[mypy]>=2.0",
]
infra = [
    "aws-cdk-lib>=2.180.0,<3.0",
    "constructs>=10.0.0,<11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A"]
ignore = [
    "ANN401",
    "A002",   # `id` shadowing builtin is idiomatic in DDD repositories
    "N818",   # DomainException naming is intentional (not Error suffix)
    "UP046",  # Generic[T] subclass syntax — migration would break subclass hierarchy
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]
"scripts/**/*.py" = ["ANN", "N806", "S101"]
"fix_seed_users.py" = ["ANN", "N806"]
"test_error.py" = ["ANN", "N806"]
# CDK constructs use `secret_name` as a resource identifier, not a credential
"infra/**/*.py" = ["S106", "ANN"]
# "bearer" is a protocol constant, not a hardcoded credential
"src/identity/user/application/dtos/outputs.py" = ["S105"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
# Third-party packages without type stubs available
module = ["mangum", "boto3.*", "aioboto3.*", "botocore.*", "jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
